--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
 	"dependencies": {
 		"axios": "^1.4.0",
 		"formik": "^2.2.9",
+		"html2canvas": "^1.4.1",
+		"moment": "^2.29.4",
+		"qrcode.react": "^3.1.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-helmet": "^6.1.0",
 		"react-query": "^3.39.3",
 		"react-router-dom": "^6.11.2",
 		"sweetalert": "^2.1.2",
@@ -22,6 +26,7 @@
 	"devDependencies": {
 		"@types/react": "^18.0.28",
 		"@types/react-dom": "^18.0.11",
+		"@types/react-helmet": "^6.1.6",
 		"@typescript-eslint/eslint-plugin": "^5.57.1",
 		"@typescript-eslint/parser": "^5.57.1",
 		"@vitejs/plugin-react": "^4.0.0",
