--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
 		"dev": "vite --host",
 		"build": "tsc && vite build",
 		"lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"test": "vitest"
 	},
 	"dependencies": {
 		"axios": "^1.4.0",
 		"formik": "^2.2.9",
 		"html2canvas": "^1.4.1",
+		"jsdom": "^22.1.0",
 		"moment": "^2.29.4",
 		"qrcode.react": "^3.1.0",
 		"react": "^18.2.0",
@@ -24,6 +26,8 @@
 		"yup": "^1.1.1"
 	},
 	"devDependencies": {
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/react": "^14.0.0",
 		"@types/react": "^18.0.28",
 		"@types/react-dom": "^18.0.11",
 		"@types/react-helmet": "^6.1.6",
@@ -38,6 +42,7 @@
 		"tailwindcss": "^3.3.2",
 		"typescript": "^5.0.2",
 		"vite": "^4.3.2",
-		"vite-plugin-rewrite-all": "^1.0.1"
+		"vite-plugin-rewrite-all": "^1.0.1",
+		"vitest": "^0.32.2"
 	}
 }
